art_make( BASENAME_ONLY
          LIB_LIBRARIES
			ubraw_RawData
			ubobj_Trigger
            larcorealg_Geometry
            larcore_Geometry_Geometry_service
			ubcore::ubana_BasicTool_GeoAlgo
            lardata_Utilities
            larevt_Filters
            larpandoraobj
            lardataobj_RawData
			lardataobj_RecoBase
            lardataobj_MCBase
			larcoreobj_SummaryData
			larsim_MCCheater_BackTrackerService_service
			larsim_MCCheater_ParticleInventoryService_service
			larpandora_LArPandoraInterface
            ubana_SinglePhotonAnalysis_SEAview
            PANDORASDK
            PANDORAMONITORING
            LArPandoraContent 
			nusimdata::SimulationBase
			UB_DATA_TYPES
			Boost::serialization
                        nurandom::RandomUtils_NuRandomService_service
                        art::Framework_Core
                        art::Framework_Principal
                        art::Framework_Services_Registry
                        art::Framework_Services_Optional_RandomNumberGenerator_service
                        art::Persistency_Common
                        art::Persistency_Provenance
                        art::Utilities
                        canvas::canvas
                        messagefacility::MF_MessageLogger
                        fhiclcpp::fhiclcpp
			cetlib::cetlib
                        cetlib_except::cetlib_except
                        CLHEP::CLHEP
                        ROOT::Geom 
          MODULE_LIBRARIES
            ubraw_RawData
                        larcorealg_Geometry
                        larcore_Geometry_Geometry_service
			ubcore::ubana_BasicTool_GeoAlgo
                        lardata_Utilities
                        larevt_Filters
                        lardataobj_RawData
			lardataobj_RecoBase
            lardataobj_MCBase
            larcoreobj_SummaryData	
			larsim_MCCheater_BackTrackerService_service
			larpandora_LArPandoraInterface
            ubevt::SignalShapingServiceMicroBooNE_service
			nusimdata::SimulationBase
			ubana_LEEPhotonAnalysis
            ubana_SinglePhotonAnalysis_SEAview
			UB_DATA_TYPES
			Boost::serialization
                        nurandom::RandomUtils_NuRandomService_service
                        art::Framework_Core
                        art::Framework_Principal
                        art::Framework_Services_Registry
                        art::Framework_Services_Optional_RandomNumberGenerator_service
                        art::Persistency_Common
                        art::Persistency_Provenance
                        art::Utilities
                        canvas::canvas
                        messagefacility::MF_MessageLogger
                        fhiclcpp::fhiclcpp
			cetlib::cetlib
                        cetlib_except::cetlib_except
                        CLHEP::CLHEP
                        ROOT::Geom )
                      
add_subdirectory(SEAview)
add_subdirectory(job)
install_headers()
install_fhicl()
install_source()
